--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-mongo
+MONGO_URI=mongodb+srv://asurendrakumarpatel:q7e1zR2e31PyhzGr@cluster).Itq1v31.mangodb
+.net/test
+PORT=8000
+SECRET_KEY=sathfvbljhdsvblsdkfjvbfsdf
+CLOUD_NAME=dK1gyluv4
+ΑΡΙ_KΕΥ=872776293729666
+API_SECRET=TXs22173VTT2zFVMAEMQ9xaYc
