--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MONGO_URI=mongodb+srv://asurendrakumarpatel:q7e1zR2e31PyhzGr@cluster).Itq1v31.mangodb
 .net/test
 PORT=8000
-SECRET_KEY=sathfvbljhdsvblsdkfjvbfsdf
-CLOUD_NAME=dK1gyluv4
-ΑΡΙ_KΕΥ=872776293729666
-API_SECRET=TXs22173VTT2zFVMAEMQ9xaYc
+SECRET_KEY=sdlhfvbljhdsvblsdkfjvbfsdf
+CLOUD_NAME=dKigyluv4
+ΑΡΙ_KΕΥ=872776293729686
+API_SECRET=TXs22l73VaTT2zFVMAEeMQ9xaYc
