--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://asurendrakumarpatel:q7e1zR2e31PyhzGr@cluster).Itq1v31.mangodb
+MONGO_URI=mongodb+srv://asurendrakumarpatel:q2eizR2e3IPyhzGf@cluster0.ltqiv3i.mangodb
 .net/test
 PORT=8000
 SECRET_KEY=sdlhfvbljhdsvblsdkfjvbfsdf
