--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ MONGO_URI=mongodb+srv://asurendrakumarpatel:q2eizR2e3IPyhzGf@cluster0.ltqiv3i.ma
 PORT=8000
 SECRET_KEY=sdlhfvbljhdsvblsdkfjvbfsdf
 CLOUD_NAME=dKigyluv4
-ΑΡΙ_KΕΥ=872776293729686
+API_KEY=872776293729686
 API_SECRET=TXs22l73VaTT2zFVMAEeMQ9xaYc
